--- a/notebooks/IngestaDatosFacebook.ipynb
+++ b/notebooks/IngestaDatosFacebook.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "e730c55b-56f6-4f37-b29d-f2e84500a11c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Probando conexion con la base de datos"
    ]
@@ -213,7 +215,9 @@
   {
    "cell_type": "markdown",
    "id": "e6f8c8c5-8a48-4530-8bc1-9769744f955a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Seleccionamos la data"
    ]
